Updated dependencies and built using JDK 17.0.3 Zulu with JavaFX